--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,22 @@
 name: first-workflow
 
-on: push
+on: 
+  push:
+    branches:
+    - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
+      - name: Checkout
       - uses: actions/checkout@v4
-      
-      - name: Run a sample github actions
-        run: echo "runs successfully"
-        
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@main
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
-      env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Configure AWS credentials
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-east-1
+      - name: Delpoy static site to s3 bucket
+        run: aws s3 sync . s3://movie-browser-2024 --delete
